# aleph-tx

./: .eslintrc.json  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.txt  CODE_REVIEW_REPORT.md  CODE_REVIEW_SUMMARY.md  Cargo.toml  DEPLOYMENT_REPORT.md  DUAL_TRACK_COMPLETE.md  DUAL_TRACK_IPC.md  DUAL_TRACK_QUICKSTART.md  EDGEX_TEST_RESULTS.md  FINAL_STATUS_REPORT.md  FINAL_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LIVE_TRADING_REPORT.md  LIVE_TRADING_STATUS.md  Makefile  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  ORDER_EXECUTION_REDESIGN.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  STATUS_REPORT.txt  TODO.md  arch_structure_review.md  build.rs  claude_tier1_refactor_prompt.md  config.example.toml  config.optimized.toml  config.toml  config.toml.example  dashboard.sh  openapi.json  package.json  start.sh  (+5 more)
.claude/: settings.json
aleph-core/: Cargo.toml
aleph-core/src/: error.rs  lib.rs  main.rs
aleph-core/src/adapter/: binance.rs  mod.rs
aleph-core/src/engine/: mod.rs  order.rs  risk.rs  state.rs
aleph-core/src/messaging/: mod.rs
aleph-core/src/signer/: evm.rs  hmac.rs  mod.rs
aleph-core/src/types/: mod.rs
aleph-mev/: Cargo.toml
aleph-mev/src/: lib.rs
docs/: ADAPTIVE_MM_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MD_CONVENTIONS.md  CONFIGURATION.md  DEEP_REVIEW_2026-03-09.md  DUAL_TRACK_IPC.md  QUICK_REFERENCE.md  WORKFLOW.md  architecture_review_v5.md
examples/: CLAUDE.md  adaptive_mm.rs  bench_pedersen.rs  bench_signature.rs  check_edgex_key.rs  debug_edgex_signature.rs  diagnostic_l2_hash.rs  edgex_mm.rs  inventory_neutral_mm.rs  lighter_trading.rs  test_account_stats.rs  test_edgex_auth.rs  test_edgex_order.rs  test_edgex_pedersen.rs  test_l2_signature.rs  test_order_simple.rs  test_packing.rs  test_pedersen.rs  test_signature_format.rs  verify_packing.rs
feeder/: CLAUDE.md  config.edgex.toml  config.toml  go.mod  go.sum  main.go
feeder/binance/: feeder.go
feeder/cmd/: lighter_feeder.go  live_mm.go  market_maker.go  simple_mm.go
feeder/config/: config.go
feeder/exchanges/: 01.go  CLAUDE.md  backpack.go  base.go  binance.go  common.go  edgex.go  hyperliquid.go  lighter.go  lighter_account_stats.go  lighter_auth.go  lighter_executor.go.backup  lighter_executor.go.disabled  lighter_private.go  mock.go
feeder/ipc/: publisher.go
feeder/shm/: CLAUDE.md  account_stats.go  depth.go  events.go  matrix.go  order_requests.go  ring.go  seqlock.go
lib/: CLAUDE.md
proto/: CLAUDE.md  aleph.proto
scripts/: CLAUDE.md  analyze_performance.sh  close_lighter_position.sh  monitor.sh  monitor_1hour.sh  review_lighter_session.sh
src/: CLAUDE.md  account_stats_reader.rs  adapter.rs  arbitrage.rs  config.rs  data_plane.rs  engine.rs  error.rs  exchange.rs  index.ts  ipc.rs  lib.rs  lighter_ffi.rs  lighter_orders.rs  lighter_trading.rs  main.rs  order_request_buffer.rs  order_tracker.rs  orderbook.rs  risk.rs  shadow_ledger.rs  shm.rs  shm_depth_reader.rs  shm_event_reader.rs  shm_reader.rs  signer.rs  telemetry.rs  types.rs
src/backpack_api/: client.rs  model.rs
src/config/: index.ts
src/controllers/: telegramController.ts
src/core/: config.rs  error.rs  mod.rs  traits.rs  types.rs
src/edgex_api/: CLAUDE.md  client.rs  mod.rs  model.rs  signature.rs
src/engine/: tradingEngine.ts
src/exchanges/: CLAUDE.md  binance.rs  edgex.rs  mod.rs  okx.rs
src/execution/: mod.rs
src/feeds/: marketDataFeed.ts  mod.rs  rest_client.rs  ws_client.rs
src/native/: CLAUDE.md
src/order_tracker/: tests.rs
src/risk/: mod.rs
src/shadow_ledger/: tests.rs
src/strategies/: grid.rs  mod.rs  traits.rs  trend.rs
src/strategy/: CLAUDE.md  adaptive_mm.rs  advanced_mm.rs  arbitrage.rs  backpack_mm.rs  edgex_mm.rs  inventory_neutral_mm.rs  lighter_mm.rs  (+3 more)
(+38 files in other folders)
