[workspace]
members = ["aleph-core", "aleph-mev"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AlephTX"]

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
k256 = "0.13"
hmac = "0.12"
sha2 = "0.10"

# Blockchain
alloy = "0.3"
revm = "14"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utils
rust_decimal = { version = "1.37", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2"
once_cell = "1"
parking_lot = "0.12"
hex = "0.4"
flume = "0.11"

# HTTP
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
