[package]
name = "aleph-tx"
version = "0.1.0"
edition = "2021"
description = "Institutional-grade quantitative trading system"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
k256 = "0.13"
hmac = "0.12"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
rust_decimal = { version = "1", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
parking_lot = "0.12"
hex = "0.4"
flume = "0.11"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
memmap2 = "0.9"

[lib]
name = "aleph_tx"
path = "src/lib.rs"

[[bin]]
name = "aleph-tx"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
memmap2 = "0.15"
