[package]
name = "aleph-tx"
version = "0.1.0"
edition = "2024"
description = "Institutional-grade quantitative trading system"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
k256 = "0.13"
hmac = "0.12"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = { version = "1", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
memmap2 = "0.9"
starknet-crypto = "0.8.1"
rand = "0.10.0"
sha3 = "0.10.8"
num-bigint = "0.4.6"
num-traits = "0.2.19"
ed25519-dalek = "2.2.0"
base64 = "0.22.1"
futures = "0.3.32"
toml = "0.8"

[lib]
name = "aleph_tx"
path = "src/lib.rs"

[[bin]]
name = "aleph-tx"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
