[package]
name = "aleph-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
k256 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
flume = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }

[lib]
name = "aleph_core"
path = "src/lib.rs"

[[bin]]
name = "aleph-core"
path = "src/main.rs"
